--- a/ObjectAnimator/ObjectAnimator.xcodeproj/xcshareddata/xcschemes/ObjectAnimator.xcscheme
+++ b/ObjectAnimator/ObjectAnimator.xcodeproj/xcshareddata/xcschemes/ObjectAnimator.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1010"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "98D918C021BF84F10022A7A4"
-               BuildableName = "ObjectAnimatorExamples.app"
-               BlueprintName = "ObjectAnimatorExamples"
-               ReferencedContainer = "container:../ObjectAnimatorExamples/ObjectAnimatorExamples.xcodeproj">
+               BuildableName = "Examples.app"
+               BlueprintName = "Examples"
+               ReferencedContainer = "container:../ObjectAnimatorExamples/Examples.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,24 +61,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "98D918C021BF84F10022A7A4"
-            BuildableName = "ObjectAnimatorExamples.app"
-            BlueprintName = "ObjectAnimatorExamples"
-            ReferencedContainer = "container:../ObjectAnimatorExamples/ObjectAnimatorExamples.xcodeproj">
+            BuildableName = "Examples.app"
+            BlueprintName = "Examples"
+            ReferencedContainer = "container:../ObjectAnimatorExamples/Examples.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "98D9189B21BF80480022A7A4"
-            BuildableName = "ObjectAnimator.framework"
-            BlueprintName = "ObjectAnimator"
-            ReferencedContainer = "container:ObjectAnimator.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
       <LocationScenarioReference
