--- a/Examples/Examples.xcodeproj/xcshareddata/xcschemes/Examples.xcscheme
+++ b/Examples/Examples.xcodeproj/xcshareddata/xcschemes/Examples.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1010"
-   version = "1.7">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "98D9189B21BF80480022A7A4"
-               BuildableName = "ObjectAnimator.framework"
-               BlueprintName = "ObjectAnimator"
-               ReferencedContainer = "container:ObjectAnimator.xcodeproj">
+               BlueprintIdentifier = "98D918C021BF84F10022A7A4"
+               BuildableName = "Examples.app"
+               BlueprintName = "Examples"
+               ReferencedContainer = "container:Examples.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,20 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "98D918A421BF80490022A7A4"
-               BuildableName = "ObjectAnimatorTests.xctest"
-               BlueprintName = "ObjectAnimatorTests"
-               ReferencedContainer = "container:ObjectAnimator.xcodeproj">
+               BlueprintIdentifier = "98D918D421BF84F30022A7A4"
+               BuildableName = "ExamplesTests.xctest"
+               BlueprintName = "ExamplesTests"
+               ReferencedContainer = "container:Examples.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "98D918DF21BF84F30022A7A4"
+               BuildableName = "ExamplesUITests.xctest"
+               BlueprintName = "ExamplesUITests"
+               ReferencedContainer = "container:Examples.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -45,7 +55,7 @@
             BlueprintIdentifier = "98D918C021BF84F10022A7A4"
             BuildableName = "Examples.app"
             BlueprintName = "Examples"
-            ReferencedContainer = "container:../ObjectAnimatorExamples/Examples.xcodeproj">
+            ReferencedContainer = "container:Examples.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -61,12 +71,18 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "98D918C021BF84F10022A7A4"
+            BuildableName = "Examples.app"
+            BlueprintName = "Examples"
+            ReferencedContainer = "container:Examples.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
-      <LocationScenarioReference
-         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
-         referenceType = "1">
-      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -74,15 +90,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "98D9189B21BF80480022A7A4"
-            BuildableName = "ObjectAnimator.framework"
-            BlueprintName = "ObjectAnimator"
-            ReferencedContainer = "container:ObjectAnimator.xcodeproj">
+            BlueprintIdentifier = "98D918C021BF84F10022A7A4"
+            BuildableName = "Examples.app"
+            BlueprintName = "Examples"
+            ReferencedContainer = "container:Examples.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
